<resources>
    <!-- アプリ名 -->
    <string name="app_name">ChatCenter iO</string>

    <!-- ## 履歴 ## -->
    <string name="msg_messages_empty">チャットがありません。</string>

    <!-- ========================================================================== -->
    <!-- ダイアログ -->
    <!-- ========================================================================== -->
    <string name="chat_network_error_message">データロードに失敗しました</string>
    <string name="chat_textbox_hint_message">メッセージを入力</string>
    <string name="chat_send_button">送信</string>

    <!-- 共通エラーダイアログ -->
    <string name="dialog_error_body">サーバと通信が行えませんでした。通信状況を確認して下さい。</string>

    <!-- 電話確認ダイアログ -->
    <string name="dialog_tel_title">%1$sへ問い合わせ</string>
    <string name="dialog_tel_body">電話アプリを起動しますか？</string>

    <!-- 電話番号未登録ダイアログ -->
    <string name="dialog_tel_number_not_register_body">電話番号が登録されておりません</string>

    <!-- 認証エラーダイアログ -->
    <string name="dialog_auth_error_body">ログアウトされました。再度ログインを行ってください。</string>

    <!-- 項目エラーダイアログ -->
    <string name="widget_create_error">項目を確認してください。</string>

    <!-- チャット未選択ダイアログ -->
    <string name="dialog_no_select_chat_body">チャットを選択してください。</string>

    <!-- チャット削除エラーダイアログ -->
    <string name="dialog_chat_delete_error_body">削除できませんでした。通信状況を確認して下さい。</string>

    <!-- メッセージ送信エラーダイアログ -->
    <string name="chatcenter_dialog_message_send_error_body">メッセージが送信できませんでした。通信状況を確認して下さい。</string>

    <!-- エラーダイアログ -->
    <string name="chatcenter_dialog_message_error_body">エラーが起きました。通信状況を確認して下さい。</string>

    <string name="chatcenter_messages_title">メッセージ</string>

    <string name="chatcenter_messages_signout">ログアウト</string>

    <!-- ========================================================================== -->
    <!-- DateTime format -->
    <!-- ========================================================================== -->
    <string name="datetime_format_full">yyyy/MM/dd HH:mm:ss</string>
    <string name="datetime_format_default">yyyy/MM/dd HH:mm</string>
    <string name="datetime_today">今日</string>
    <string name="datetime_yesterday">昨日</string>
    <string name="datetime_2_days_ago">一昨日</string>
    <string name="datetime_format_time">HH:mm</string>
    <string name="datetime_format_day">MM/dd</string>
    <string name="datetime_format_today">今日 HH:mm</string>

    <!-- ========================================================================== -->
    <!-- Message Status -->
    <!-- ========================================================================== -->
    <string name="message_status_read">既読</string>
    <string name="message_status_sending">送信中</string>
    <string name="message_status_sent">送信済み</string>
    <string name="message_status_send_failed">送信失敗</string>

    <string name="webview_header" translatable="false">WebView</string>

    <string name="save">保存</string>
    <string name="you">あなた:&#160;</string>
    <string name="no_message">メッセージなし</string>
    <string name="sent_a_sticker">ウィジェットを送信しました。</string>
    <string name="called">電話しました。</string>
    <string name="dialog_confirm_reply_sticker">以下のメッセージを送ります。</string>
    <string name="cancel">キャンセル</string>
    <string name="message_reply_sticker_header">私の答えは</string>
    <string name="done">決定</string>
    <string name="sticker_video_call_now">%s が 通話を要求しました。\n</string>
    <string name="sticker_video_call_title" formatted="false">%s が %s に通話しました。\n</string>
    <string name="sticker_video_call_missed">応答がありませんでした。</string>
    <string name="sticker_video_call_time" formatted="false">%02d:%02d</string>
    <string name="select_file">送信する画像かPDFを選択してください</string>
    <string name="camera_permission_denied">カメラへのアクセスを拒否すると撮影できません</string>
    <string name="storage_permission_denied">外部ストレージへのアクセスを拒否するとファイルを送信できません</string>
    <string name="location_permission_denied">位置情報へのアクセスを拒否すると地図を送信できません</string>
    <string name="video_permission_denied">カメラへのアクセスを拒否するとビデオチャットを開始できません</string>
    <string name="audio_permission_denied">マイクへのアクセスを拒否するとビデオチャットを開始できません</string>
    <string name="alert">ご注意</string>
    <string name="file_uploading">アップロード中…</string>

    <!-- ========================================================================== -->
    <!-- チャネル詳細画面 -->
    <!-- ========================================================================== -->
    <string name="channel_detail_header">チャネル詳細</string>
    <string name="info_header">インフォメーション</string>
    <string name="about_header">ChatCenter iOについて</string>
    <string name="terms_of_service">利用規約</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="service_level_agreement">サービスレベル契約</string>
    <string name="copyright">著作権情報</string>
    <string name="assignee_or_follower">担当者/閲覧者</string>
    <string name="assignee">担当者</string>
    <string name="followers">閲覧者</string>
    <string name="no_assignee">担当者なし</string>
    <string name="no_followers">閲覧者なし</string>
    <string name="status_online">オンライン</string>
    <string name="google_map">Googleマップ</string>
    <string name="message_reply_choosed_value">%sを選択しました。</string>
    <string name="share_image">画像をシェアする。</string>
    <string name="download_image_failed">画像の取得に失敗しました。</string>
    <string name="online_at" formatted="false">%s前にオンライン</string>
    <string name="year">年</string>
    <string name="years">年</string>
    <string name="month">ヶ月</string>
    <string name="months">ヶ月</string>
    <string name="day">日</string>
    <string name="days">日</string>
    <string name="hour">時間</string>
    <string name="hours">時間</string>
    <string name="second">秒</string>
    <string name="seconds">秒</string>
    <string name="minute">分</string>
    <string name="minutes">分</string>
    <string name="sticker_menu_header">ウィジェットメニュー</string>
    <string name="sticker_menu_close">閉じる</string>

    <string name="sticker_label_confirm">質問</string>
    <string name="sticker_label_calendar">カレンダー</string>
    <string name="sticker_label_location">位置情報</string>
    <string name="sticker_label_image">写真</string>
    <string name="sticker_label_phrase">定型文</string>
    <string name="sticker_label_camera">カメラ</string>
    <string name="sticker_label_video_call">ビデオチャット</string>
    <string name="fixed_phrases">定型文</string>
    <string name="tap_to_select">タップして選択してください</string>
    <string name="fixed_phrases_session_label_app">アプリ推奨</string>
    <string name="fixed_phrases_session_label_org">チーム推奨</string>
    <string name="fixed_phrases_session_label_myphrases">自分専用</string>
    <string name="fixed_phrases_myphrase_empty">自分専用定型文を作っていません</string>
    <string name="fixed_phrases_no_app_fixed_phrases">アプリ推奨定型文がありません</string>
    <string name="fixed_phrases_no_org_fixed_phrases">チーム推奨定型文がありません</string>
    <string name="enter_question">質問を入力してください</string>
    <string name="answer_type">質問の種類を選んでください</string>

    <string name="accept">はい</string>
    <!-- ユーザーが長い文字列を入力した時にアラートを表示する-->
    <string name="alert_message_text_too_long" formatted="false">%d文字以内で入力してください。</string>

    <string name="schedule_guide">日付と時刻をタッブして選んでください</string>
    <string name="schedule_title">候補日時</string>
    <string name="preview">プレビュー</string>
    <string name="next">次へ</string>
    <string name="schedule_monday">月</string>
    <string name="schedule_tuesday">火</string>
    <string name="schedule_wednesday">水</string>
    <string name="schedule_thursday">木</string>
    <string name="schedule_friday">金</string>
    <string name="schedule_saturday">土</string>
    <string name="schedule_sunday">日</string>
    <string name="schedule_widget_title">以下から都合の良い日時を選択してください。</string>
    <string name="schedule_create_other">他の日時を選択する</string>

    <string name="answer_type_yes_no">はい／いいえ</string>
    <string name="answer_type_multi_choice">単一選択</string>
    <string name="answer_type_checkbox">複数選択</string>
    <string name="answer_type_leaner_scale">段階評価</string>

    <string-array name="linear_scale_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="ok">OK</string>
    <string name="add_more_options">項目を追加</string>
    <string name="scale_to">から</string>
    <string name="default_scale_label_from">非常に悪い</string>
    <string name="default_scale_label_to">非常に良い</string>
    <string name="preview_title">プレビュー</string>

    <string name="hour_am">午前</string>
    <string name="hour_pm">午後</string>

    <string name="sticker_label_phone_call">電話する</string>
    <string name="suggestion">サジェスチョン</string>

    <string name="ringing">呼び出し中…</string>
    <string name="calling">着信中…</string>
    <string name="video_off">ビデオはオフです</string>
    <string name="widget_question_hint">質問</string>
    <string name="processing">お待ちください…</string>
    <string name="option">オプション%d</string>
    <string name="funnel">ファネル</string>
    <string name="note">ノート</string>
    <string name="close_conversation">対応を終了する</string>
    <string name="delete_conversation">対応を削除する</string>
    <string name="open_conversation">対応を再開する</string>


    <string name="schedule_date_format">yyyy年M月d日 EEEE</string>
    <string name="date_format_short">ah:mm</string>
    <string name="date_format_date">M月d日(EEE)</string>
    <string name="schedule_hour" >%2$s%1$d時</string>

    <string name="note_hint">内容</string>
    <string name="business_funnel">ファネル</string>
    <string name="message_status">ステータス</string>
    <string name="unassigned_status">未対応</string>
    <string name="assigned_status">担当中</string>
    <string name="close_status">対応済</string>
    <string name="all">全て</string>
    <string name="conversation_closed">対応を終了しました。</string>
    <string name="conversation_opened">対応を再開しました。</string>
</resources>
