<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/mainLayout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ToolbarStyle">

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:padding="@dimen/margin10dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/color_chatcenter_title_text"
            android:textSize="16sp"/>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_line_width"
        android:layout_below="@id/toolbar"
        android:background="@color/color_chatcenter_separator_light"/>

    <LinearLayout
        android:id="@+id/common_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:textColor="@color/color_chatcenter_text">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10dp"
            android:layout_marginTop="@dimen/margin10dp"
            android:text="@string/enter_question"
            android:textColor="@color/color_chatcenter_text"/>

        <EditText
            android:id="@+id/edit_question"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:background="@drawable/edittext_border"
            android:gravity="top|left"
            android:hint="@string/widget_question_hint"
            android:padding="@dimen/margin8dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10dp"
            android:layout_marginTop="@dimen/margin10dp"
            android:text="@string/answer_type"
            android:textColor="@color/color_chatcenter_text"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_spinner"
            android:spinnerMode="dropdown">
        </Spinner>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/common_field"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"/>

</RelativeLayout>